--- a/client-app/src/Components/css/AuthenticationScreen.css
+++ b/client-app/src/Components/css/AuthenticationScreen.css
@@ -4,14 +4,11 @@
     box-sizing: border-box;
 }
 #myOuter{
-    background-image: linear-gradient(-225deg, #DFFFCD 0%, #90F9C4 48%, #39F3BB 100%);
-}
-#centerContent{
-    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    /* background-image: linear-gradient(-225deg, #DFFFCD 0%, #90F9C4 48%, #39F3BB 100%); */
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    display: flex;
 }
 #headerFrameBox:hover{
     cursor: pointer;
