--- a/client/src/Components/css/Common.css
+++ b/client/src/Components/css/Common.css
@@ -2,3 +2,9 @@
     cursor: pointer;
     box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
 }
+#absDivCenter{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
