--- a/client/src/Components/css/ListRoom.css
+++ b/client/src/Components/css/ListRoom.css
@@ -36,3 +36,9 @@
     left: 50%;
     transform: translate(-50%,-50%);
 }
+#absCenterBox{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
