--- a/client/src/Components/css/HomepageScreen.css
+++ b/client/src/Components/css/HomepageScreen.css
@@ -24,3 +24,9 @@
     cursor: pointer;
     box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
 }
+#RobotReceiver{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+}
